== 1.3.3

- Use SPEC_OPTS instead of RSPECOPTS (Aslak Hellesøy)

== 1.3.2

- Fix bug trying to modify frozen environment strings
- Upgrade all specs to RSpec 1.0 style
- Add specs for rake tasks

== 1.3.1

- Fixed to be compatible with RSpec 1.0.x (added fourth parameter to Formatter#dump_summary)

== 1.3

- Fixed to be compatible with RSpec 0.9
- Failure location text now contains both the exception message and class name (in case the type and message attributes were truncated)

== 1.2.4

- Allow to report on RSpec specs when working with non-gem RSpec
- Note: CI::Reporter is only compatible with RSpec up to 0.8.2

== 1.2.3

- Append to TESTOPTS and RSPECOPTS environment variables (Bret Pettichord) so that other apps can put values
  in them as well

== 1.2.2

- Responds to environment variable CI_CAPTURE: if set to "off", stdout/stderr capture will be disabled.

== 1.2.1

- Add license and copyright information (finally)

== 1.2

- Capture standard output and standard error during each individual test suite and include in the XML file in system-out and system-err elements, respectively (Tracker#9054[http://rubyforge.org/tracker/index.php?func=detail&aid=9054&group_id=2857&atid=11007])

== 1.1

- Add +assertions+ attribute to the +testsuite+ element that will contain per-suite assertion counts when used with Test::Unit.  Not useful with applications that read Ant/JUnit XML, but custom applications may wish to access it.

== 1.0

- Initial Release.